# Teams_RAG_Chatbot

./: .env.example  .gitignore  README.md  example.txt  pyproject.toml  run_local.py
Frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.json  vite.config.ts
Frontend/src/: App.tsx  index.css  main.tsx
Frontend/src/components/: AnswerCard.tsx  ChatWindow.tsx  ConfirmButton.tsx  MessageInput.tsx  ProtectedRoute.tsx  Sidebar.tsx
Frontend/src/context/: ChatContext.tsx
Frontend/src/pages/: ChatPage.tsx  ForgotPasswordPage.tsx  LoginPage.tsx  (+2 more)
api/: index.py
app/: Dockerfile  README.md  chat_engine.py  clear_index.py  config.py  document_loader.py  guardrails.py  main.py  pinecone_index.py  read_excel.py  requirements.txt  smart_indexer.py  utils.py
app/clients/: openAI_client.py
app/db/: supabase_client.py
app/graph/: assistant.py  state.py
app/models/: schemas.py
app/outdated/: clear_index.py  main.py  read_excel.py
app/routes/: chat.py
app/services/: document_loader.py  embedding.py  excel_cache.py  pinecone_index.py  smart_indexer.py  utils.py
app/utils/: helper.py
client/: index.html  package-lock.json  package.json
client/src/: App.jsx  index.css  main.jsx
test-file/: CCC - CA Log (Current).parquet  CCC - CA Log (Current).xlsm
tests/: test_chunking.py  test_embedding.py  test_excel.py  test_excel_pipeline.py  test_indexing.py  test_msg_extraction.py  test_multi_input.py  test_pdf_extraction.py  test_pinecone_index.py
web-frontend/: package-lock.json  package.json
(+25 files in other folders)
